# OpenRoad_based_3DPDK_Creation_Framework

./: .gitattributes  LICENSE  README.md
include/ord/: OpenRoad.hh
src/: OpenRoad.cc  OpenRoad.i  OpenRoad.tcl
src/cts/test/: array_tile.lib  array_tile_ins_delay.lib  pad.lib  twice.defok
src/dbSta/test/: bidir1.lib  bus1.lib  liberty1.lib  network_edit1.defok  read_liberty1.lib  read_verilog1.defok  read_verilog2.defok  read_verilog4.defok  read_verilog5.defok  read_verilog7.defok  read_verilog8.defok
src/dft/test/: one_cell_sky130.defok  scandef_core_sky130.defok  scandef_sky130.defok
src/dpl/test/: aes-opt.defok  aes.defok  blockage01.defok  blockage1-opt.defok  cell_on_block1.defok  edge_spacing-opt.defok  edge_spacing.defok  fence01.defok  fence02.defok  fence03.defok  fillers1.defok  fillers10.defok  fillers5.defok  fillers7.defok  fillers8.defok  fillers9.defok  fragmented_row01.defok  fragmented_row02.defok  fragmented_row03.defok  (+28 more)
src/odb/src/lefout/: 3DPDKconfig.cpp  CMakeLists.txt  lefout.cpp
test/: 3DPDK_Nangate45.config  aes_nangate45.tcl  flow.tcl  pad.lib  place_inst.defok  upf_test.defok
test/Nangate45/: Nangate45.vars  fake_macros.lib  fakeram45_1024x32.lib  fakeram45_512x64.lib  fakeram45_64x32.lib  fakeram45_64x7.lib  fakeram45_64x96.lib
test/Nangate45_io/: dummy_pads.lib
test/asap7/: asap7sc7p5t_SEQ_LVT_FF_nldm_220123.lib  asap7sc7p5t_SEQ_RVT_FF_nldm_220123.lib  asap7sc7p5t_SEQ_RVT_SS_nldm_220123.lib  asap7sc7p5t_SEQ_SLVT_FF_nldm_220123.lib
test/ihp-sg13g2/: sg13g2_stdcell_typ_1p20V_25C.lib  sg13g2_stdcell_typ_1p50V_25C.lib
(+387 files in other folders)
